--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,16 +1,70 @@
-@import url("../styles/header.css");
-
 :root {
-    --cor-principal: #3A404E;
-    --cor-segundaria: #667085;
-    --cor-tercerizada: #FFFFFF;
-    --cor-quarta: #8E2424;
+    --text-color: #667085;
+    --text-color-principal: #8E2424;
+  }
+  
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
+  }
+  
+  body {
+    width: 100%;
+    height: 100vh;
+  }
+  
+  nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 1rem 0;
+  }
+  
+  .links a {
+    color: var(--text-color);
+    text-decoration: none;
+    margin-right: 2rem;
+  }
+  
+  button {
+    padding: 0.8rem 1rem;
+    cursor: pointer;
+    border: none;
+    border-radius: 0.5rem;
+    font-weight: 500;
+    background: none;
+    color: var(--text-color);
+    font-size: 0.9rem;
+  }
+  
+  button#signUp {
+    background-color: #8E2424;
+    color: #FFF;
+  }
 
-    --fonte-principal: "inter";
-}
+  .cabecalho {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+    margin: 6em 20em;
+  }
 
-body {
-    font-family: var(--fonte-principal);
-    background: var(--cor-tercerizada);
-    font-weight: 400;
-}
+  .cabecalho__sobre {
+    color: var(--text-color-principal);
+    font-weight: 600;
+    font-size: 1rem;
+  }
+
+  .cabecalho__titulo {
+    font-size: 3em;
+  }
+
+  .cabecalho__texto {
+    font-size: 1.25rem;
+    text-align: center;
+    margin: 0.5em 10em;
+  }
